push all project

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <title>today picture</title>
+  <title>Today's NASA image</title>
   <link rel="stylesheet" href="./css/index.css">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
